New in Version v2.4.2
- Introduced "element viewer" to Mosaic
- It is not longer possible to load independent elemental maps in Mosaic
(replaced by element viewer)
- Bug fixes in Mosaic
- Datacubes with underscore in their name were breaking Mosaic (fixed)

New in Version v2.4.1
- Merging of h5, edf and mca datasets is now possible in Mosaic
- Mosaic allowed the merging of datasets with different specsizes (fixed)
- Mosaic freezes when merging h5 or edf datasets (fixed)
- EDF stacks were being labelled as h5 datasets (fixed)

New in Version v2.4.0
- Added support to EDF file batches
- Fixed broken *.h5 loader and related issues
- Corrected default SNIPBG parameters
- ImageAnalyzer fitting was forcing semilog plot scale (fixed)
- Unexpected auto_wizard crash when finding elements (fixed)
- User snipbg parameters are override by defaults (fixed)
- Mosaic freezing when calculating merge dataset MPS (fixed)

New in Version v2.3.1
- Added "flip" option to Mosaic panel
- Different datacube types could be merged (fixed)
- Set ROI spectra shown was being picked with reverse Y index when a map other than the sum was displayed (fixed)
- Mosaic window impossible to close when opening second mosaic through the main panel (fixed)
- Small datacubes (<400 spectra) and Single core auto_wizard were crashing with bgstrip option None (fixed)

New in Version v2.3.0
- Improved memory managed
- Auto-wizard data pre-treatment speed significantly improved
- New Index Navigator panel available from within Image Analyzer
- Support to *.CSV FT-IR maps datasets [experimental]
- Clearing maps and resetting samples with an Image Analyzer open would cause misbehavior (fixed)
- Large datasets (900k+ spectra) were causing the program to crash when using auto_wizard (fixed)

New in Version v2.2.1
- Chunks splitting with auto_wizard improved
- Automatic update tool added
- Added missing scrollbars to Mosaic GUI
- n-dead pixels appears when using n-cores with auto_wizard (fixed)
