@@ -9,7 +9,7 @@ import logging
 from psutil import cpu_count
 
 VERSION = "2.4.2"
-VERSION_MOS = "2.4.2"
+VERSION_MOS = VERSION
 LOGLEVEL = logging.INFO
 MY_DATACUBE = None
 FIND_ELEMENT_LIST = None
